# linkedin_games_ranking

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  README.md  cli-aliases.sh  cluster_issuer.yaml  deployment.yaml  docker-compose.yml  environment.yml  ingress.yaml  linkedin_games_parser.py  pyproject.toml  ranking.py  ranking_app.py  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
.streamlit/: secrets.example.toml
azure/: azure-pipelines.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: DataTable.tsx  WinBar.tsx  WinOverTimeChart.tsx
frontend/src/pages/: HeadToHeadPage.tsx  LeaderboardPage.tsx
kubernetes/: cluster_issuer.yaml  deployment.yaml
nginx/: docker-compose.yml
nginx/conf.d/: app.conf  init-letsencrypt.conf
src/: linkedin_games_parser.py  ranking.py  ranking_app.py
src/api/: config.py  main.py
src/api/routes/: head_to_head.py  leaderboard.py  upload.py
src/api/services/: ranking_service.py
